--- a/index.html
+++ b/index.html
@@ -13,16 +13,30 @@
     <header class="header">
         <div class="container">
             <nav class="header__top justify-content-between">
-                <ul class="menu-secondary">
-                    <li><a href="#">Tienda</a></li>
-                    <li><a href="#">Tarjeta</a></li>
-                    <li><a href="#">Pago</a></li>
+                <ul class="nav menu-secondary">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Tienda</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Tarjeta</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Pago</a>
+                    </li>
                 </ul>
-                <ul class="menu-social">
-                    <li><a href="#">Facebook</a></li>
-                    <li><a href="#">Twitter</a></li>
-                    <li><a href="#">Google+</a></li>
-                    <li><a href="#">Pinterest</a></li>
+                <ul class="nav menu-social">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Facebook</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Twitter</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Google+</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Pinterest</a>
+                    </li>
                 </ul>
             </nav>
             <nav class="header__middle">
@@ -34,13 +48,25 @@
                 </ul>
             </nav>
             <nav class="header__bottom justify-content-between">
-                <ul class="header__bottom">
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Departamentos</a></li>
-                    <li><a href="#">Galería</a></li>
-                    <li><a href="#">Tienda</a></li>
-                    <li><a href="#">Noticias</a></li>
-                    <li><a href="#">Contacto</a></li>
+                <ul class="nav menu-main">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Departamentos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Galería</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Tienda</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Noticias</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contacto</a>
+                    </li>
                 </ul>
                 <button>Compre ahora!</button>
             </nav>
@@ -146,12 +172,21 @@
                     <p>Podrás mantenerte al tanto de toda nuestra información relevante</p>
                     <input type="email" name="" id="">
                     <button type="submit">Registrame</button>
-                    <ul class="menu-social">
-                        <li><a href="#">Facebook</a></li>
-                        <li><a href="#">Twitter</a></li>
-                        <li><a href="#">Google+</a></li>
-                        <li><a href="#">Pinterest</a></li>
-                    </ul>
+
+                    <ul class="nav menu-social">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Facebook</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Twitter</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Google+</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Pinterest</a>
+                        </li>
+                    </ul>   
                 </div>
                 <p>(c) 2019 ABC ServiTodo</p>
             </div>
