--- a/index.html
+++ b/index.html
@@ -47,28 +47,37 @@
                     <li class="info-site__email">Horario <br>L - V | 09:00 - 19:00</li>
                 </ul>
             </nav>
-            <nav class="header__bottom justify-content-between">
-                <ul class="nav menu-main">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Inicio</a>
+
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Departamentos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Galería</a>
+                        <a class="nav-link disabled" href="#">Galería</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Tienda</a>
+                        <a class="nav-link disabled" href="#">Tienda</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Noticias</a>
+                        <a class="nav-link disabled" href="#">Noticias</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
+                        <a class="nav-link disabled" href="#">Contacto</a>
                     </li>
-                </ul>
-                <button>Compre ahora!</button>
+                    </ul>
+                    <form class="form-inline my-2 my-lg-0">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Cotice ahora!</button>
+                    </form>
+                </div>
             </nav>
         </div>
     </header>
