[+] Boostrap (Button Group): Menus Secondary y Social (header)

--- a/index.html
+++ b/index.html
@@ -12,30 +12,30 @@
 <body>
     <header class="header">
         <div class="container">
-            <nav class="header__top justify-content-between">
-                <ul class="nav menu-secondary">
+            <nav class="btn-toolbar header__top" role="toolbar" aria-label="Toolbar with button groups"">
+                <ul class="btn-group nav menu-secondary" role="group" aria-label="First group">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Tienda</a>
+                        <a class="btn btn-link nav-link" href="#">Tienda</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Tarjeta</a>
+                        <a class="btn btn-link nav-link" href="#">Tarjeta</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pago</a>
+                        <a class="btn btn-link nav-link" href="#">Pago</a>
                     </li>
                 </ul>
-                <ul class="nav menu-social">
+                <ul class="btn-group nav menu-social" role="group" aria-label="Second group">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Facebook</a>
+                        <a class="btn btn-link nav-link" href="#">Facebook</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Twitter</a>
+                        <a class="btn btn-link nav-link" href="#">Twitter</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Google+</a>
+                        <a class="btn btn-link nav-link" href="#">Google+</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pinterest</a>
+                        <a class="btn btn-link nav-link" href="#">Pinterest</a>
                     </li>
                 </ul>
             </nav>
