[+] Bootstrap (Button Group): Menu Social (footer)

--- a/index.html
+++ b/index.html
@@ -182,18 +182,18 @@
                     <input type="email" name="" id="">
                     <button type="submit">Registrame</button>
 
-                    <ul class="nav menu-social">
+                    <ul class="btn-group nav menu-social">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Facebook</a>
+                            <a class="btn btn-link nav-link" href="#">Facebook</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Twitter</a>
+                            <a class="btn btn-link nav-link" href="#">Twitter</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Google+</a>
+                            <a class="btn btn-link nav-link" href="#">Google+</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Pinterest</a>
+                            <a class="btn btn-link nav-link" href="#">Pinterest</a>
                         </li>
                     </ul>   
                 </div>
