[+] Bootstrap: Logo e información del sitio

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <header class="header">
-        <div class="container">
-            <nav class="btn-toolbar header__top" role="toolbar" aria-label="Toolbar with button groups"">
+        <div class="container d-flex flex-column">
+            <nav class="btn-toolbar d-flex justify-content-end header__top" role="toolbar" aria-label="Toolbar with button groups"">
                 <ul class="btn-group nav menu-secondary" role="group" aria-label="First group">
                     <li class="nav-item">
                         <a class="btn btn-link nav-link" href="#">Tienda</a>
@@ -39,12 +39,12 @@
                     </li>
                 </ul>
             </nav>
-            <nav class="header__middle">
+            <nav class="d-flex justify-content-between navbar navbar-expand-lg header__middle">
                 <img src="./images/logo-abcservitodo.png" alt="ABC ServiTodo">
-                <ul class="info-site">
-                    <li class="info-site__email">Escribamos <br>info@correo.co</li>
-                    <li class="info-site__email">Llamenos <br>0800.123.456789</li>
-                    <li class="info-site__email">Horario <br>L - V | 09:00 - 19:00</li>
+                <ul class="info-site list-inline">
+                    <li class="info-site__email list-inline-item">Escribamos <br>info@correo.co</li>
+                    <li class="info-site__email list-inline-item">Llamenos <br>0800.123.456789</li>
+                    <li class="info-site__email list-inline-item">Horario <br>L - V | 09:00 - 19:00</li>
                 </ul>
             </nav>
 
