--- a/index.html
+++ b/index.html
@@ -87,17 +87,32 @@
                 <hgroup>
                     <h3>Qué podemos ofrecer</h3><hr><h2>Nuestros servicios</h2>
                 </hgroup>
-                <div class="row">
-                    <div class="col">
-                        Servicio 1    
+                <div class="card-deck">
+                    <div class="card">
+                      <img src="https://picsum.photos/id/1026/360/220" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Servicio 1</h5>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                      </div>
                     </div>
-                    <div class="col">
-                        Servicio 2
+                    <div class="card">
+                      <img src="https://picsum.photos/id/103/360/220" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Servicio 2</h5>
+                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                      </div>
                     </div>
-                    <div class="col">
-                        Servicio 3
+                    <div class="card">
+                      <img src="https://picsum.photos/id/1051/360/220" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Servicio 3</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                      </div>
                     </div>
-                </div>
+                  </div>
             </section>
             <section class="why-us">
                 <hgroup>
