[+] Bootstrap: Sección 'Marcas'

--- a/index.html
+++ b/index.html
@@ -187,21 +187,21 @@
                 </div>
             </section>
             <section class="brands">
-                <div class="row">
-                    <div class="col">
-                        Marca 1    
+                <div class="card-deck">
+                    <div class="card">
+                        <img src="https://picsum.photos/id/237/200/100" class="card-img-top" alt="...">
                     </div>
-                    <div class="col">
-                        Marca 2
+                    <div class="card">
+                        <img src="https://picsum.photos/id/237/200/100" class="card-img-top" alt="...">
                     </div>
-                    <div class="col">
-                        Marca 3
+                    <div class="card">
+                        <img src="https://picsum.photos/id/237/200/100" class="card-img-top" alt="...">
                     </div>
-                    <div class="col">
-                        Marca 4    
+                    <div class="card">
+                        <img src="https://picsum.photos/id/237/200/100" class="card-img-top" alt="...">
                     </div>
-                    <div class="col">
-                        Marca 5       
+                    <div class="card">
+                        <img src="https://picsum.photos/id/237/200/100" class="card-img-top" alt="...">
                     </div>
                 </div>
             </section>
