[+] Bootstrap: Sección 'Por qué nosotros'

--- a/index.html
+++ b/index.html
@@ -115,73 +115,79 @@
                   </div>
             </section>
             <section class="why-us">
-                <hgroup>
-                    <h3>Cotice ahora</h3><hr><h2>Cuentenos que desea</h2>
-                </hgroup>
-
-                <form>
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <input type="text" class="form-control" id="name" placeholder="Nombre">
-                        </div>
-                        <div class="form-group col-md-6">
-                            <input type="email" class="form-control" id="email" placeholder="Correo electrónico">
-                        </div>
-                    </div>
-                    <div class="form-row">
-                        <div class="form-group col-md-4">
-                            <input type="text" class="form-control" id="phone" placeholder="Teléfono">
-                        </div>
-                        <div class="form-group col-md-4">
-                            <input type="text" class="form-control" id="address" placeholder="Dirección">
-                        </div>
-                        <div class="form-group col-md-4">
-                            <input type="text" class="form-control" id="city" placeholder="Ciudad">
-                        </div>
-                    </div>
-                    <div class="form-row">
-                        <div class="form-group col-md-8">
-                            <select id="service" class="form-control">
-                                <option selected>Seleccione el servicio...</option>
-                                <option>...</option>
-                            </select>
-                        </div>
-                        <div class="form-group col-md-4">
-                            <div class="custom-file">
-                                <input type="file" class="custom-file-input" id="files" required>
-                                <label class="custom-file-label" for="files">Adjuntar archivo...</label>
+                <div class="row">
+                    <section class="quote-form col-md-6">
+                        <hgroup>
+                            <h3>Cotice ahora</h3><hr><h2>Cuentenos que desea</h2>
+                        </hgroup>
+        
+                        <form>
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <input type="text" class="form-control" id="name" placeholder="Nombre">
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <input type="email" class="form-control" id="email" placeholder="Correo electrónico">
+                                </div>
                             </div>
-                        </div>
-                    </div>    
-                    <div class="form-row">
-                        <div class="form-group col-md-12">
-                            <textarea class="form-control" id="details" rows="3">Detalles de lo que desea cotizar</textarea>
-                        </div>    
-                    </div>
-                    <div class="form-row">
-                        <div class="form-group col-md-12">
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="terms-conditions" required>
-                                <label class="form-check-label" for="terms-conditions">
-                                    Acepto términos y condiciones
-                                </label>
+                            <div class="form-row">
+                                <div class="form-group col-md-4">
+                                    <input type="text" class="form-control" id="phone" placeholder="Teléfono">
+                                </div>
+                                <div class="form-group col-md-4">
+                                    <input type="text" class="form-control" id="address" placeholder="Dirección">
+                                </div>
+                                <div class="form-group col-md-4">
+                                    <input type="text" class="form-control" id="city" placeholder="Ciudad">
+                                </div>
                             </div>
-                        </div>
-                    </div>        
-                    <button type="submit" class="btn btn-primary">Enviar</button>
-                </form>
-
-                <hgroup>
-                    <h3>Por que elegirnos</h3><hr><h2>Cómo trabajamos</h2>
-                </hgroup>
-                <ul>
-                    <li>Característica 1</li>
-                    <li>Característica 2</li>
-                    <li>Característica 3</li>
-                    <li>Característica 4</li>
-                    <li>Característica 5</li>
-                </ul>
-                <div class="footer">
+                            <div class="form-row">
+                                <div class="form-group col-md-8">
+                                    <select id="service" class="form-control">
+                                        <option selected>Seleccione el servicio...</option>
+                                        <option>...</option>
+                                    </select>
+                                </div>
+                                <div class="form-group col-md-4">
+                                    <div class="custom-file">
+                                        <input type="file" class="custom-file-input" id="files" required>
+                                        <label class="custom-file-label" for="files">Adjuntar archivo...</label>
+                                    </div>
+                                </div>
+                            </div>    
+                            <div class="form-row">
+                                <div class="form-group col-md-12">
+                                    <textarea class="form-control" id="details" rows="3">Detalles de lo que desea cotizar</textarea>
+                                </div>    
+                            </div>
+                            <div class="form-row">
+                                <div class="form-group col-md-12">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="terms-conditions" required>
+                                        <label class="form-check-label" for="terms-conditions">
+                                            Acepto términos y condiciones
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>        
+                            <button type="submit" class="btn btn-primary">Enviar</button>
+                        </form>
+                    </section>
+                    <section class="why-us col-md-6">
+                        <hgroup>
+                            <h3>Por que elegirnos</h3><hr><h2>Cómo trabajamos</h2>
+                        </hgroup>
+                        <ul>
+                            <li>Característica 1</li>
+                            <li>Característica 2</li>
+                            <li>Característica 3</li>
+                            <li>Característica 4</li>
+                            <li>Característica 5</li>
+                        </ul>
+                    </section>
+                </div>
+            
+                <div class="footer col-md-12">
                     <p>Llamenos a <br>0180009876231</p>
                     <button>Cotice ya!</button>
                 </div>
