[+] Bootstrap: Ordenar Widgets del Footer

--- a/index.html
+++ b/index.html
@@ -218,12 +218,12 @@
     </div>
     <footer class="footer">
         <div class="container">
-            <div class="">
-                <div class="">
+            <div class="row">
+                <div class="col-md-4">
                     <img src="./dist/assets/images/logo-abcservitodo.png" alt="ABC ServiTodo">
                     <p>Itaque tempore nisi eaque esse sint! Animi nostrum exercitationem mollitia, repudiandae dolores illum cumque ducimus rerum error?</p>
                 </div>
-                <div class="">                   
+                <div class="col-md-4">                   
                     <hgroup>
                         <h3>Para estar en contacto</h3><hr><h2>Nuestros datos</h2>
                     </hgroup>
@@ -233,7 +233,7 @@
                         <li><strong>Dirección: </strong> Avenida Siempre Viva, Springfield USA</li>
                     </ul> 
                 </div>
-                <div class="">
+                <div class="col-md-4">
                     <hgroup>
                         <h3>Mantente al tanto</h3><hr><h2>Registrate a nuestro boletín</h2>
                     </hgroup>
