--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="./dist/assets/css/bootstrap.css">
     <link rel="stylesheet" href="./dist/assets/css/master.css">
+    <link rel="stylesheet" href="./dist/assets/css/carousel.css">
 </head>
 <body>
     <header class="header">
@@ -81,6 +82,50 @@
             </nav>
         </div>
     </header>
+
+    <section class="our-services">
+
+        <div class="container">
+            <div id="carousel-services" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner row w-100 mx-auto" role="listbox">
+                    <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3 active">
+                        <img src="./dist/assets/images/services/1.jpg" class="img-fluid mx-auto d-block" alt="img1">
+                    </div>
+                    <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
+                        <img src="./dist/assets/images/services/2.jpg" class="img-fluid mx-auto d-block" alt="img2">
+                    </div>
+                    <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
+                        <img src="./dist/assets/images/services/3.jpg" class="img-fluid mx-auto d-block" alt="img3">
+                    </div>
+                    <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
+                        <img src="./dist/assets/images/services/4.jpg" class="img-fluid mx-auto d-block" alt="img4">
+                    </div>
+                    <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
+                        <img src="./dist/assets/images/services/5.jpg" class="img-fluid mx-auto d-block" alt="img5">
+                    </div>
+                    <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
+                        <img src="./dist/assets/images/services/6.jpg" class="img-fluid mx-auto d-block" alt="img6">
+                    </div>
+                    <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
+                        <img src="./dist/assets/images/services/7.jpg" class="img-fluid mx-auto d-block" alt="img7">
+                    </div>
+                    <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
+                        <img src="./dist/assets/images/services/8.jpg" class="img-fluid mx-auto d-block" alt="img8">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carousel-services" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Anterior</span>
+                </a>
+                <a class="carousel-control-next" href="#carousel-services" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Siguiente</span>
+                </a>
+            </div>
+        </div>
+    </section><!-- .our-services -->
+
+
     <div class="container">
         <main class="main-content">
             <section class="our-services">
@@ -216,6 +261,9 @@
             <h3>Barra lateral</h3>
         </aside>
     </div>
+
+
+
     <footer class="footer">
         <div class="container">
             <div class="row">
@@ -270,5 +318,6 @@
 
     <script src="./dist/assets/js/jquery.min.js"></script>
     <script src="./dist/assets/js/bootstrap.min.js"></script>
+    <script src="./dist/assets/js/carousel.js"></script>
 </body>
 </html>
