[+] Boostrap: Carousel Multiples Cards

--- a/index.html
+++ b/index.html
@@ -86,31 +86,98 @@
     <section class="our-services">
 
         <div class="container">
+            <hgroup>
+                <h3>Qué podemos ofrecer</h3><hr><h2>Nuestros servicios</h2>
+            </hgroup>
             <div id="carousel-services" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner row w-100 mx-auto" role="listbox">
+                <div class="carousel-inner card-deck row w-100 mx-auto" role="listbox">
                     <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3 active">
-                        <img src="./dist/assets/images/services/1.jpg" class="img-fluid mx-auto d-block" alt="img1">
+                        <div class="card">
+                            <!--img src="https://picsum.photos/id/1026/360/220" class="card-img-top img-fluid mx-auto d-block" alt="..."-->
+                            <img src="./dist/assets/images/services/1.jpg" class="card-img-top img-fluid mx-auto d-block" alt="img1">
+                            <div class="card-body">
+                              <h5 class="card-title">Servicio 1</h5>
+                              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            </div>
+                          </div>
                     </div>
                     <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
-                        <img src="./dist/assets/images/services/2.jpg" class="img-fluid mx-auto d-block" alt="img2">
+                        <div class="card">
+                            <!--img src="https://picsum.photos/id/103/360/220" class="card-img-top img-fluid mx-auto d-block" alt="..."-->
+                            <img src="./dist/assets/images/services/2.jpg" class="card-img-top img-fluid mx-auto d-block" alt="img2">
+                            <div class="card-body">
+                                <h5 class="card-title">Servicio 2</h5>
+                                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            </div>
+                        </div>
                     </div>
                     <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
-                        <img src="./dist/assets/images/services/3.jpg" class="img-fluid mx-auto d-block" alt="img3">
+                        <div class="card">
+                            <!--img src="https://picsum.photos/id/1051/360/220" class="card-img-top img-fluid mx-auto d-block" alt="..."-->
+                            <img src="./dist/assets/images/services/3.jpg" class="card-img-top img-fluid mx-auto d-block" alt="img3">
+                            <div class="card-body">
+                                <h5 class="card-title">Servicio 3</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            </div>
+                        </div>
                     </div>
                     <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
-                        <img src="./dist/assets/images/services/4.jpg" class="img-fluid mx-auto d-block" alt="img4">
+                        <div class="card">
+                            <!--img src="https://picsum.photos/id/1051/360/220" class="card-img-top img-fluid mx-auto d-block" alt="..."-->
+                            <img src="./dist/assets/images/services/4.jpg" class="card-img-top img-fluid mx-auto d-block" alt="img4">
+                            <div class="card-body">
+                                <h5 class="card-title">Servicio 4</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            </div>    
+                        </div>
                     </div>
                     <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
-                        <img src="./dist/assets/images/services/5.jpg" class="img-fluid mx-auto d-block" alt="img5">
+                        <div class="card">
+                            <!--img src="https://picsum.photos/id/1051/360/220" class="card-img-top img-fluid mx-auto d-block" alt="..."-->
+                            <img src="./dist/assets/images/services/5.jpg" class="card-img-top img-fluid mx-auto d-block" alt="img5">
+                            <div class="card-body">
+                                <h5 class="card-title">Servicio 5</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            </div>    
+                        </div>
                     </div>
                     <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
-                        <img src="./dist/assets/images/services/6.jpg" class="img-fluid mx-auto d-block" alt="img6">
+                        <div class="card">
+                            <!--img src="https://picsum.photos/id/1051/360/220" class="card-img-top img-fluid mx-auto d-block" alt="..."-->
+                            <img src="./dist/assets/images/services/6.jpg" class="card-img-top img-fluid mx-auto d-block" alt="img6">
+                            <div class="card-body">
+                                <h5 class="card-title">Servicio 6</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            </div>    
+                        </div>
                     </div>
                     <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
-                        <img src="./dist/assets/images/services/7.jpg" class="img-fluid mx-auto d-block" alt="img7">
+                        <div class="card">
+                            <!--img src="https://picsum.photos/id/1051/360/220" class="card-img-top img-fluid mx-auto d-block" alt="..."-->
+                            <img src="./dist/assets/images/services/7.jpg" class="card-img-top img-fluid mx-auto d-block" alt="img7">
+                            <div class="card-body">
+                                <h5 class="card-title">Servicio 7</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            </div>    
+                        </div>
                     </div>
                     <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
-                        <img src="./dist/assets/images/services/8.jpg" class="img-fluid mx-auto d-block" alt="img8">
+                        <div class="card">
+                            <!--img src="https://picsum.photos/id/1051/360/220" class="card-img-top img-fluid mx-auto d-block" alt="..."-->
+                            <img src="./dist/assets/images/services/8.jpg" class="card-img-top img-fluid mx-auto d-block" alt="img8">
+                            <div class="card-body">
+                                <h5 class="card-title">Servicio 8</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            </div>    
+                        </div>
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carousel-services" role="button" data-slide="prev">
@@ -128,37 +195,6 @@
 
     <div class="container">
         <main class="main-content">
-            <section class="our-services">
-                <hgroup>
-                    <h3>Qué podemos ofrecer</h3><hr><h2>Nuestros servicios</h2>
-                </hgroup>
-                <div class="card-deck">
-                    <div class="card">
-                      <img src="https://picsum.photos/id/1026/360/220" class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <h5 class="card-title">Servicio 1</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                      </div>
-                    </div>
-                    <div class="card">
-                      <img src="https://picsum.photos/id/103/360/220" class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <h5 class="card-title">Servicio 2</h5>
-                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                      </div>
-                    </div>
-                    <div class="card">
-                      <img src="https://picsum.photos/id/1051/360/220" class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <h5 class="card-title">Servicio 3</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                      </div>
-                    </div>
-                  </div>
-            </section>
             <section class="why-us">
                 <div class="row">
                     <section class="quote-form col-md-6">
