--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./dist/assets/css/bootstrap.css">
     <link rel="stylesheet" href="./dist/assets/css/master.css">
     <link rel="stylesheet" href="./dist/assets/css/carousel.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
 
 <body>
@@ -35,13 +36,12 @@
                     <div class="col-12.col-md-4">
 
                         <section class="menu-social">
-                            <nav class="btn-toolbar d-flex justify-content-end header__top" role="toolbar"
-                                aria-label="Toolbar with button groups"">
+                            <nav class="btn-toolbar d-flex justify-content-end header__top" role="toolbar" aria-label="Toolbar with button groups"">
                                 <ul class=" btn-group nav menu-social" role="group" aria-label="Second group">
-                                    <li class="nav-item"><a class="btn btn-link nav-link" href="#">Facebook</a></li>
-                                    <li class="nav-item"><a class="btn btn-link nav-link" href="#">Twitter</a></li>
-                                    <li class="nav-item"><a class="btn btn-link nav-link" href="#">Google+</a></li>
-                                    <li class="nav-item"><a class="btn btn-link nav-link" href="#">Pinterest</a></li>
+                                    <li class="nav-item"><a class="btn btn-link nav-link" href="https://www.facebook.com"><span class="social--without-text">Facebook</span></span></a></li>
+                                    <li class="nav-item"><a class="btn btn-link nav-link" href="https://www.twitter.com"><span class="social--without-text">Twitter</span></a></li>
+                                    <li class="nav-item"><a class="btn btn-link nav-link" href="https://www.instagram.com"><span class="social--without-text">Instagram</span></a></li>
+                                    <li class="nav-item"><a class="btn btn-link nav-link" href="https://www.pinterest.com"><span class="social--without-text">Pinterest</span></a></li>
                                 </ul>
                             </nav>
                         </section>
@@ -396,18 +396,10 @@
                     </form>
 
                     <ul class="btn-group nav menu-social">
-                        <li class="nav-item">
-                            <a class="btn btn-link nav-link" href="#">Facebook</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="btn btn-link nav-link" href="#">Twitter</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="btn btn-link nav-link" href="#">Google+</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="btn btn-link nav-link" href="#">Pinterest</a>
-                        </li>
+                        <li class="nav-item"><a class="btn btn-link nav-link" href="https://www.facebook.com"><span class="social--without-text">Facebook</span></a></li>
+                        <li class="nav-item"><a class="btn btn-link nav-link" href="https://www.twitter.com"><span class="social--without-text">Twitter</span></a></li>
+                        <li class="nav-item"><a class="btn btn-link nav-link" href="https://www.instagram.com"><span class="social--without-text">Instagram</span></a></li>
+                        <li class="nav-item"><a class="btn btn-link nav-link" href="https://www.pinterest.com"><span class="social--without-text">Pinterest</span></a></li>
                     </ul>
                 </div>
                 <p>(c) 2019 ABC ServiTodo</p>
