--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./dist/assets/css/bootstrap.css">
     <link rel="stylesheet" href="./dist/assets/css/master.css">
     <link rel="stylesheet" href="./dist/assets/css/carousel.css">
+    <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
 
@@ -22,9 +23,9 @@
                 <div class="row justify-content-end align-items-center">
                     <div class="col-12.col-md-8">
 
-                        <section class="menu-secondary">
+                        <section class="menu-secondary d-none d-md-block">
                             <nav class="btn-toolbar d-flex justify-content-end header__top" role="toolbar" aria-label="Toolbar with button groups"">
-                                <ul class=" btn-group nav menu-secondary" role="group" aria-label="First group">
+                                <ul class=" btn-group nav menu-secondary text-uppercase" role="group" aria-label="First group">
                                     <li class="nav-item"><a class="btn btn-link nav-link" href="#">Tienda</a></li>
                                     <li class="nav-item"><a class="btn btn-link nav-link" href="#">Tarjeta</a></li>
                                     <li class="nav-item"><a class="btn btn-link nav-link" href="#">Pago</a></li>
@@ -54,12 +55,12 @@
         <section class="header__middle">
             <div class="container">
 
-                <div class="row justify-content-center align-items-center">
-                    <div class="col-12.col-md-4">
-                        <img class="img-fluid" src="./dist/assets/images/logo-abcservitodo.png" alt="ABC ServiTodo">
+                <div class="row justify-content-between align-items-center">
+                    <div class="col-12 col-md-4 d-flex justify-content-start">
+                        <img class="img-fluid mx-auto" src="./dist/assets/images/logo-abcservitodo.png" alt="ABC ServiTodo">
                     </div>
-                    <div class="col-12.col-md-8">
-                        <ul class="info-group list-inline">
+                    <div class="col-12 col-md-8 d-none d-md-block">
+                        <ul class="info-group list-inline d-flex justify-content-end">
                             <li class="info list-inline-item">
                                 <h3>Escribanos a</h3>
                                 <p>info@correo.co</a>
@@ -89,7 +90,7 @@
                                 <button class="navbar-toggler mb-4" type="button" data-toggle="collapse" data-target="#menu-main" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                                     <span class="navbar-toggler-icon"></span>
                                 </button>
-                                <div id="menu-main" class="collapse navbar-collapse justify-content-center justify-content-lg-end">
+                                <div id="menu-main" class="collapse navbar-collapse justify-content-center justify-content-lg-end menu-main">
                                     <ul class="menu navbar-nav text-center text-uppercase">
                                         <li><a class="nav-link" href="./nosotros.html">Nosotros</a></li>
                                         <li><a class="nav-link" href="./blog.html">Blog</a></li>
