--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./dist/assets/css/bootstrap.css">
     <link rel="stylesheet" href="./dist/assets/css/master.css">
     <link rel="stylesheet" href="./dist/assets/css/carousel.css">
-    <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dosis:200,300,400,500,600,700,800|Rubik:300,400,500,700,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
 
@@ -92,12 +92,12 @@
                                 </button>
                                 <div id="menu-main" class="collapse navbar-collapse justify-content-center justify-content-lg-end menu-main">
                                     <ul class="menu navbar-nav text-center text-uppercase">
-                                        <li><a class="nav-link" href="./nosotros.html">Nosotros</a></li>
-                                        <li><a class="nav-link" href="./blog.html">Blog</a></li>
-                                        <li><a class="nav-link" href="./clases.html">Clases</a></li>
-                                        <li><a class="nav-link" href="./galeria.html">Galería</a></li>
-                                        <li><a class="nav-link" href="./contacto.html">Contacto</a></li>
-                                        <li><a class="nav-link my-2 my-sm-0">Cotice ahora!</a></li>
+                                        <li><a class="nav-link" href="#">Nosotros</a></li>
+                                        <li><a class="nav-link" href="#">Blog</a></li>
+                                        <li><a class="nav-link" href="#">Clases</a></li>
+                                        <li><a class="nav-link" href="#">Galería</a></li>
+                                        <li><a class="nav-link" href="#">Contacto</a></li>
+                                        <li><a class="nav-link my-2 my-sm-0" href="#">Cotice ahora!</a></li>
                                     </ul>  <!-- #menu-main -->
                                 </div>  <!-- .navbar -->
                             </nav>  <!-- .nav -->
@@ -325,7 +325,7 @@
                     </section>
                 </div>
 
-                <div class="footer col-md-12">
+                <div class="col-md-12">
                     <p>Llamenos a <br>0180009876231</p>
                     <button>Cotice ya!</button>
                 </div>
@@ -355,57 +355,85 @@
         </aside>
     </div>
 
-
-
     <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <img src="./dist/assets/images/logo-abcservitodo.png" alt="ABC ServiTodo">
-                    <p>Itaque tempore nisi eaque esse sint! Animi nostrum exercitationem mollitia, repudiandae dolores
-                        illum cumque ducimus rerum error?</p>
-                </div>
-                <div class="col-md-4">
-                    <hgroup>
-                        <h3>Para estar en contacto</h3>
-                        <hr>
-                        <h2>Nuestros datos</h2>
-                    </hgroup>
-                    <ul class="info-site">
-                        <li><strong>Teléfono: </strong> +1 123 456 789</li>
-                        <li><strong>Correo: </strong> info@correo.co</li>
-                        <li><strong>Dirección: </strong> Avenida Siempre Viva, Springfield USA</li>
-                    </ul>
-                </div>
-                <div class="col-md-4">
-                    <hgroup>
-                        <h3>Mantente al tanto</h3>
-                        <hr>
-                        <h2>Registrate a nuestro boletín</h2>
-                    </hgroup>
-                    <p>Podrás mantenerte al tanto de toda nuestra información relevante</p>
 
-                    <form>
-                        <div class="input-group mb-3">
-                            <input type="text" class="form-control" placeholder="Correo electrónico"
-                                aria-label="Correo electrónico" aria-describedby="button-addon2">
-                            <div class="input-group-append">
-                                <button class="btn btn-outline-secondary" type="button"
-                                    id="button-addon2">Registrar</button>
+        <section class="footer__top">
+            <div class="container">
+
+                <div class="row widgets">
+                    <div class="col-md-4">
+                        <img src="./dist/assets/images/logo-abcservitodo.png" alt="ABC ServiTodo">
+                        <p>Itaque tempore nisi eaque esse sint! Animi nostrum exercitationem mollitia, repudiandae dolores
+                            illum cumque ducimus rerum error?</p>
+                    </div>
+                    <div class="col-md-4">
+                        <hgroup>
+                            <h3>Para estar en contacto</h3>
+                            <hr>
+                            <h2>Nuestros datos</h2>
+                        </hgroup>
+                        <ul class="info-site">
+                            <li><strong>Teléfono: </strong> +1 123 456 789</li>
+                            <li><strong>Correo: </strong> info@correo.co</li>
+                            <li><strong>Dirección: </strong> Avenida Siempre Viva, Springfield USA</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4">
+                        <hgroup>
+                            <h3>Mantente al tanto</h3>
+                            <hr>
+                            <h2>Registrate a nuestro boletín</h2>
+                        </hgroup>
+                        <p>Podrás mantenerte al tanto de toda nuestra información relevante</p>
+    
+                        <form>
+                            <div class="input-group mb-3">
+                                <input type="text" class="form-control" placeholder="Correo electrónico"
+                                    aria-label="Correo electrónico" aria-describedby="button-addon2">
+                                <div class="input-group-append">
+                                    <button class="btn btn-outline-secondary" type="button"
+                                        id="button-addon2">Registrar</button>
+                                </div>
                             </div>
-                        </div>
-                    </form>
-
-                    <ul class="btn-group nav menu-social">
-                        <li class="nav-item"><a class="btn btn-link nav-link" href="https://www.facebook.com"><span class="social--without-text">Facebook</span></a></li>
-                        <li class="nav-item"><a class="btn btn-link nav-link" href="https://www.twitter.com"><span class="social--without-text">Twitter</span></a></li>
-                        <li class="nav-item"><a class="btn btn-link nav-link" href="https://www.instagram.com"><span class="social--without-text">Instagram</span></a></li>
-                        <li class="nav-item"><a class="btn btn-link nav-link" href="https://www.pinterest.com"><span class="social--without-text">Pinterest</span></a></li>
-                    </ul>
+                        </form>
+    
+                        <ul class="btn-group nav menu-social">
+                            <li class="nav-item"><a class="btn btn-link nav-link" href="https://www.facebook.com"><span class="social--without-text">Facebook</span></a></li>
+                            <li class="nav-item"><a class="btn btn-link nav-link" href="https://www.twitter.com"><span class="social--without-text">Twitter</span></a></li>
+                            <li class="nav-item"><a class="btn btn-link nav-link" href="https://www.instagram.com"><span class="social--without-text">Instagram</span></a></li>
+                            <li class="nav-item"><a class="btn btn-link nav-link" href="https://www.pinterest.com"><span class="social--without-text">Pinterest</span></a></li>
+                        </ul>
+                    </div>
                 </div>
-                <p>(c) 2019 ABC ServiTodo</p>
+
             </div>
-        </div>
+        </section>
+
+        <section class="footer__bottom">
+            <div class="container">
+
+                <div class="row">
+                    <div class="col-md-6">
+
+                        <nav class="menu-main">
+                            <ul class="menu navbar navbar-nav d-flex flex-column flex-md-row text-center text-md-left text-uppercase">
+                                <li><a class="nav-link" href="./nosotros.html">Nosotros</a></li>
+                                <li><a class="nav-link" href="./blog.html">Blog</a></li>
+                                <li><a class="nav-link" href="./clases.html">Clases</a></li>
+                                <li><a class="nav-link" href="./galeria.html">Galería</a></li>
+                                <li><a class="nav-link" href="./contacto.html">Contacto</a></li>
+                            </ul>  <!-- #menu-main -->
+                        </nav>  <!-- .nav -->
+
+                    </div>
+                    <div class="col-md-6">
+                        <p class="text-center text-md-right mt-1 mt-md-0 pt-2 copyright">Todos los derechos reservados &copy; 2019</p>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
     </footer>
 
     <script src="./dist/assets/js/jquery.min.js"></script>
